NPE fix when clicking on pk in table editor when no debugger was opened yet